--- a/SalesDatePredictionSolution/SalesDatePrediction.API/appsettings.json
+++ b/SalesDatePredictionSolution/SalesDatePrediction.API/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "AllowedOrigins": "http://localhost:4200",
   "ConnectionStrings": {
     "SQLServerConnection": "Server=DESKTOP-K8K8VLD; Database=StoreSample; User Id=sa; Password=Jesus.1006179498; Encrypt=False"
   }
