I added jasmine karma tests origin

--- a/SalesDatePredictionSolution/SalesDatePrediction.API/appsettings.json
+++ b/SalesDatePredictionSolution/SalesDatePrediction.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": "http://localhost:4200",
+  "AllowedOrigins": "http://localhost:4200,http://localhost:9876",
   "ConnectionStrings": {
     "SQLServerConnection": "Server=DESKTOP-K8K8VLD; Database=StoreSample; User Id=sa; Password=Jesus.1006179498; Encrypt=False"
   }
